--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>fresno and clovis - apartment map</title>
+<title>fresno & clovis - apartment map list</title>
 <meta name="robots" content="noindex" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
