--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ a { text-decoration: none; color: #000; }
 
 	<li class="site-note-section">Share!</li>
 	<li>If you find this apartment map list helpful in anyway, please share it with those who do gig delivery work in Fresno, CA and Clovis, CA.</li>
-	<li id="share-it"></li>
+	<li>copy and share link: <b>https://mialeevang.github.io/fcaml/</b></li>
 	
 	<li class="site-note-section">Take Care!</li>
 	<li>I do this mostly whenever I'm free, so updates on the apartment map list may take awhile.</li>
@@ -31117,10 +31117,6 @@ $(".mapp-title div, .coord").addClass('display-none');
 var aptmapped = $('.mapp-content').length;
 $("<span style='font-size:14pt;'>"+aptmapped+" apartments mapped</span> <span>-</span>").prependTo("#num-apt-mapped");
 
-/* share link */
-var currentUrl = window.location.href;
-$("<span>copy and share link: </span><br/><b>"+currentUrl+"</b>").appendTo('#share-it');
-		
 /* misc */
 $("html, body").animate({ scrollTop: "0px" }, 100);
 
