--- a/index.html
+++ b/index.html
@@ -4524,7 +4524,7 @@ a { text-decoration: none; color: #000; }
 	</span>
 </span>
 
-<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>N Fruit Ave</u> (closest to the <u>train track</u>)<u.</li></ul>
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>N Fruit Ave</u> (closest to the <u>train track</u>).</li></ul>
 <ul class="mapp-list">
 
 <li class="mapp-table">
@@ -6278,7 +6278,7 @@ a { text-decoration: none; color: #000; }
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">722 N Clovis Ave <br/>732 N Clovis Ave</span>
+<span class="mapp-address">722 N Clovis Ave <br>732 N Clovis Ave</span>
 
 <table>
 <thead>
@@ -6762,7 +6762,7 @@ a { text-decoration: none; color: #000; }
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">1050 E Herndon Ave <br/>1050 N Bond St <br/>1050 N Fir Ave</span>
+<span class="mapp-address">1050 E Herndon Ave <br>1050 N Bond St <br>1050 N Fir Ave</span>
 
 <table>
 <thead>
@@ -6908,7 +6908,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">1150 E Herndon Ave <br/>1150 N 6th St <br/>1150 E Fir Ave</span>
+<span class="mapp-address">1150 E Herndon Ave <br>1150 N 6th St <br>1150 E Fir Ave</span>
 
 <table>
 <thead>
@@ -7067,7 +7067,7 @@ a { text-decoration: none; color: #000; }
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">1160 E Perrin Ave <br/>1164 E Perrin Ave</span>
+<span class="mapp-address">1160 E Perrin Ave <br>1164 E Perrin Ave</span>
 
 <table>
 <thead>
@@ -8362,7 +8362,7 @@ a { text-decoration: none; color: #000; }
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">745 N Fowler Ave <br/>765 N Fowler Ave</span>
+<span class="mapp-address">745 N Fowler Ave <br>765 N Fowler Ave</span>
 <table>
 <thead>
 <tr>
@@ -15079,7 +15079,7 @@ a { text-decoration: none; color: #000; }
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">2674 N Fresno St <br/>2674 E Clinton Ave</span>
+<span class="mapp-address">2674 N Fresno St <br>2674 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15100,7 +15100,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2660 N Fresno St <br/>2660 E Clinton Ave</span>
+<span class="mapp-address">2660 N Fresno St <br>2660 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15121,7 +15121,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2040 N Fresno St <br/>2040 E Clinton Ave</span>
+<span class="mapp-address">2040 N Fresno St <br>2040 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15142,7 +15142,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2050 N Fresno St <br/>2050 E Clinton Ave</span>
+<span class="mapp-address">2050 N Fresno St <br>2050 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15163,7 +15163,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2062 N Fresno St <br/>2062 E Clinton Ave</span>
+<span class="mapp-address">2062 N Fresno St <br>2062 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15184,7 +15184,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2074 N Fresno St <br/>2074 E Clinton Ave</span>
+<span class="mapp-address">2074 N Fresno St <br>2074 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15205,7 +15205,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2086 N Fresno St <br/>2086 E Clinton Ave</span>
+<span class="mapp-address">2086 N Fresno St <br>2086 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15226,7 +15226,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2098 N Fresno St <br/>2098 E Clinton Ave</span>
+<span class="mapp-address">2098 N Fresno St <br>2098 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15247,7 +15247,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2110 N Fresno St <br/>2110 E Clinton Ave</span>
+<span class="mapp-address">2110 N Fresno St <br>2110 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15268,7 +15268,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2122 N Fresno St <br/>2122 E Clinton Ave</span>
+<span class="mapp-address">2122 N Fresno St <br>2122 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15289,7 +15289,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2134 N Fresno St <br/>2134 E Clinton Ave</span>
+<span class="mapp-address">2134 N Fresno St <br>2134 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15310,7 +15310,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2146 N Fresno St <br/>2146 E Clinton Ave</span>
+<span class="mapp-address">2146 N Fresno St <br>2146 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15331,7 +15331,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2158 N Fresno St <br/>2158 E Clinton Ave</span>
+<span class="mapp-address">2158 N Fresno St <br>2158 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15352,7 +15352,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2170 N Fresno St <br/>2170 E Clinton Ave</span>
+<span class="mapp-address">2170 N Fresno St <br>2170 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15373,7 +15373,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2182 N Fresno St <br/>2182 E Clinton Ave</span>
+<span class="mapp-address">2182 N Fresno St <br>2182 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15394,7 +15394,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2194 N Fresno St <br/>2194 E Clinton Ave</span>
+<span class="mapp-address">2194 N Fresno St <br>2194 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15415,7 +15415,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2206 N Fresno St <br/>2206 E Clinton Ave</span>
+<span class="mapp-address">2206 N Fresno St <br>2206 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15436,7 +15436,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2218 N Fresno St <br/>2218 E Clinton Ave</span>
+<span class="mapp-address">2218 N Fresno St <br>2218 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15457,7 +15457,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2230 N Fresno St <br/>2230 E Clinton Ave</span>
+<span class="mapp-address">2230 N Fresno St <br>2230 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15478,7 +15478,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2242 N Fresno St <br/>2242 E Clinton Ave</span>
+<span class="mapp-address">2242 N Fresno St <br>2242 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15499,7 +15499,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2626 N Fresno St <br/>2626 E Clinton Ave</span>
+<span class="mapp-address">2626 N Fresno St <br>2626 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15520,7 +15520,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2612 N Fresno St <br/>2612 E Clinton Ave</span>
+<span class="mapp-address">2612 N Fresno St <br>2612 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15541,7 +15541,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2650 N Fresno St <br/>2650 E Clinton Ave</span>
+<span class="mapp-address">2650 N Fresno St <br>2650 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15562,7 +15562,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2588 N Fresno St <br/>2588 E Clinton Ave</span>
+<span class="mapp-address">2588 N Fresno St <br>2588 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15583,7 +15583,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2600 N Fresno St <br/>2600 E Clinton Ave</span>
+<span class="mapp-address">2600 N Fresno St <br>2600 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15604,7 +15604,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2638 N Fresno St <br/>2638 E Clinton Ave</span>
+<span class="mapp-address">2638 N Fresno St <br>2638 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15625,7 +15625,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2762 N Fresno St <br/>2762 E Clinton Ave</span>
+<span class="mapp-address">2762 N Fresno St <br>2762 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15646,7 +15646,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2283 N Fresno St <br/>2283 E Clinton Ave</span>
+<span class="mapp-address">2283 N Fresno St <br>2283 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15667,7 +15667,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2247 N Fresno St <br/>2247 E Clinton Ave</span>
+<span class="mapp-address">2247 N Fresno St <br>2247 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15688,7 +15688,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2259 N Fresno St <br/>2259 E Clinton Ave</span>
+<span class="mapp-address">2259 N Fresno St <br>2259 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15709,7 +15709,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2271 N Fresno St <br/>2271 E Clinton Ave</span>
+<span class="mapp-address">2271 N Fresno St <br>2271 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15730,7 +15730,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2235 N Fresno St <br/>2235 E Clinton Ave</span>
+<span class="mapp-address">2235 N Fresno St <br>2235 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -15751,7 +15751,7 @@ a { text-decoration: none; color: #000; }
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">2295 N Fresno St <br/>2295 E Clinton Ave</span>
+<span class="mapp-address">2295 N Fresno St <br>2295 E Clinton Ave</span>
 
 <table>
 <thead>
@@ -20598,7 +20598,7 @@ unit #
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">2059 E Spruce Ave <br/>2061 E Spruce Ave</span>
+<span class="mapp-address">2059 E Spruce Ave <br>2061 E Spruce Ave</span>
 
 <table>
 <thead>
@@ -24612,7 +24612,7 @@ unit #
 <ul class="mapp-list">
 
 <li class="mapp-table">
-<span class="mapp-address">1541 N Bulldog Ln <br/>1541 N 9th St</span>
+<span class="mapp-address">1541 N Bulldog Ln <br>1541 N 9th St</span>
 
 <table>
 <thead>
@@ -24641,7 +24641,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">1547 N Bulldog Ln <br/>1547 N 9th St</span>
+<span class="mapp-address">1547 N Bulldog Ln <br>1547 N 9th St</span>
 
 <table>
 <thead>
@@ -24682,7 +24682,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">1553 N Bulldog Ln <br/>1553 N 9th St</span>
+<span class="mapp-address">1553 N Bulldog Ln <br>1553 N 9th St</span>
 
 <table>
 <thead>
@@ -24723,7 +24723,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">1559 N Bulldog Ln <br/>1559 N 9th St</span>
+<span class="mapp-address">1559 N Bulldog Ln <br>1559 N 9th St</span>
 
 <table>
 <thead>
@@ -24758,7 +24758,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">1565 N Bulldog Ln <br/>1565 N 9th St</span>
+<span class="mapp-address">1565 N Bulldog Ln <br>1565 N 9th St</span>
 
 <table>
 <thead>
@@ -24793,7 +24793,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">1571 N Bulldog Ln <br/>1571 N 9th St</span>
+<span class="mapp-address">1571 N Bulldog Ln <br>1571 N 9th St</span>
 
 <table>
 <thead>
@@ -24822,7 +24822,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5113 N 9th St <br/>5113 E Bulldog Ln</span>
+<span class="mapp-address">5113 N 9th St <br>5113 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -24850,7 +24850,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5115 N 9th St <br/>5115 E Bulldog Ln</span>
+<span class="mapp-address">5115 N 9th St <br>5115 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -24891,7 +24891,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5117 N 9th St <br/>5117 E Bulldog Ln</span>
+<span class="mapp-address">5117 N 9th St <br>5117 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -24920,7 +24920,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5121 N 9th St <br/>5121 E Bulldog Ln</span>
+<span class="mapp-address">5121 N 9th St <br>5121 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -24955,7 +24955,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5123 N 9th St <br/>5123 E Bulldog Ln</span>
+<span class="mapp-address">5123 N 9th St <br>5123 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -24983,7 +24983,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5125 N 9th St <br/>5125 E Bulldog Ln</span>
+<span class="mapp-address">5125 N 9th St <br>5125 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -25018,7 +25018,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5127 N 9th St <br/>5127 E Bulldog Ln</span>
+<span class="mapp-address">5127 N 9th St <br>5127 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -25071,7 +25071,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5129 N 9th St <br/>5129 E Bulldog Ln</span>
+<span class="mapp-address">5129 N 9th St <br>5129 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -25106,7 +25106,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5131 N 9th St <br/>5131 E Bulldog Ln</span>
+<span class="mapp-address">5131 N 9th St <br>5131 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -25147,7 +25147,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5133 N 9th St <br/>5133 E Bulldog Ln</span>
+<span class="mapp-address">5133 N 9th St <br>5133 E Bulldog Ln</span>
 
 <table>
 <thead>
@@ -25188,7 +25188,7 @@ unit #
 </li>
 
 <li class="mapp-table">
-<span class="mapp-address">5177 N Bulldog Ln <br/>5177 N 9th St</span>
+<span class="mapp-address">5177 N Bulldog Ln <br>5177 N 9th St</span>
 
 <table>
 <thead>
