--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
 <title>fresno & clovis - apartment map list</title>
-<meta name="robots" content="noindex" />
+<meta name="robots" content="noindex">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="#000">
@@ -24827,6 +24827,7 @@ unit #
 <table>
 <thead>
 <tr>
+<th class="bldg">bldg #</th>
 <th class="unit">unit #</th>
 <th class="coord">coordinate</th>
 </tr>
@@ -24960,6 +24961,7 @@ unit #
 <table>
 <thead>
 <tr>
+<th class="bldg">bldg #</th>
 <th class="unit">unit #</th>
 <th class="coord">coordinate</th>
 </tr>
