--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ a { text-decoration: none; color: #000; }
 
 <div id="num-apt-mapped" class="site-note" style="text-align: center;">
 	<span style="font-size:10pt;"><b>
-		2024, May 31st	</b></span>
+		2024, Jun 1st	</b></span>
 </div>
 
 <div class="mapp-filter display-none">
@@ -25363,6 +25363,853 @@ unit #
 </li>
 </ul>
 
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	The Parks at Fig Garden
+	<span class="mapp-city">-
+	Fresno, CA 93705
+	</span>
+</span>
+
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">835 W Ashlan Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.793481465275, -119.82177631115668</td>
+</tr>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.793484048987665, -119.82162587545423</td>
+</tr>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.793483499831915, -119.8214728631609</td>
+</tr>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.79345143411571, -119.82126332056094</td>
+</tr>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">109 209</td>
+<td class="coord">36.793324048858814, -119.82125993935755</td>
+</tr>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">110 111 210 211</td>
+<td class="coord">36.79328997347358, -119.8217777085369</td>
+</tr>
+
+<tr>
+<td class="bldg">835</td>
+<td class="unit">112 113 212 213</td>
+<td class="coord">36.79313267867655, -119.82177304129758</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">845 W Ashlan Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.79312086108377, -119.8215313228148</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79312669940019, -119.82133898223502</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">105 205</td>
+<td class="coord">36.79312809621827, -119.82119617248749</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">106 107 206 207</td>
+<td class="coord">36.79294269382331, -119.82118096049945</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">108 109 208 209</td>
+<td class="coord">36.79278819712136, -119.82118611125537</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">110 210</td>
+<td class="coord">36.79266487841736, -119.8211850932143</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">111 211</td>
+<td class="coord">36.79274656306632, -119.8214037924467</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">112 212 113 213</td>
+<td class="coord">36.792741441790106, -119.82154483322384</td>
+</tr>
+
+<tr>
+<td class="bldg">845</td>
+<td class="unit">114 115 214 215</td>
+<td class="coord">36.79275167151206, -119.82174212803484</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">855 W Ashlan Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">855</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.792562351511, -119.82176295646786</td>
+</tr>
+
+<tr>
+<td class="bldg">855</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79237289362314, -119.82175633321872</td>
+</tr>
+
+<tr>
+<td class="bldg">855</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.79236021599464, -119.8215663820332</td>
+</tr>
+
+<tr>
+<td class="bldg">855</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.792461109929846, -119.82128664073744</td>
+</tr>
+
+<tr>
+<td class="bldg">855</td>
+<td class="unit">109 110 209 210</td>
+<td class="coord">36.79218027679502, -119.82176418766684</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">865 W Ashlan Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.792045363866904, -119.82152026376161</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79196854220691, -119.82135574565532</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.79188885963076, -119.82118440891495</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">107</td>
+<td class="coord">36.7922464304128, -119.82134549445594</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">108</td>
+<td class="coord">36.79213924962266, -119.82119926264136</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">109</td>
+<td class="coord">36.792050670453996, -119.82102547235475</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">110</td>
+<td class="coord">36.7920019075226, -119.82086558241397</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">111 211</td>
+<td class="coord">36.79192621340352, -119.82060202071341</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">112 113 212 213</td>
+<td class="coord">36.79178937131243, -119.82068746293103</td>
+</tr>
+
+<tr>
+<td class="bldg">865</td>
+<td class="unit">114 115 214 215</td>
+<td class="coord">36.7916551955555, -119.82078616819504</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4025 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.7905930312067, -119.81788456781365</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79044198200793, -119.81787183230921</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">105 205</td>
+<td class="coord">36.79029748434642, -119.81787838103699</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">106 206</td>
+<td class="coord">36.79039170254866, -119.8181460888158</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.79045800782179, -119.8182659437416</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">109 110 209 210</td>
+<td class="coord">36.79053199797081, -119.81842680897634</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">111 112 211 212</td>
+<td class="coord">36.79069821221555, -119.81831731528108</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">113 114 213 214</td>
+<td class="coord">36.79083219635639, -119.81821827461948</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">115 116 215 216</td>
+<td class="coord">36.79100359266948, -119.81839830226254</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">117 118 217 218</td>
+<td class="coord">36.79107996645, -119.81856315249243</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">119 219</td>
+<td class="coord">36.79110431760757, -119.81882876660138</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">120 121 220 221</td>
+<td class="coord">36.79102659156022, -119.81888902934645</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">122 123 222 223</td>
+<td class="coord">36.79091487649784, -119.81896297544746</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">124 125 224 225</td>
+<td class="coord">36.790808574747736, -119.81903554085758</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">126 127 226 227</td>
+<td class="coord">36.79088907393429, -119.8192265550908</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">128 129 228 229</td>
+<td class="coord">36.79097982059792, -119.81788274156357</td>
+</tr>
+
+<tr>
+<td class="bldg">4025</td>
+<td class="unit">130 131 230 231</td>
+<td class="coord">36.790832361229434, -119.81787937945859</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4045 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.791116525131535, -119.81960493809832</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.791116898449765, -119.8194139129929</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.791116958552294, -119.81922375143955</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.79132600323484, -119.81901357280712</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">109 110 209 210</td>
+<td class="coord">36.79147642568431, -119.8190173228587</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">111 112 211 212</td>
+<td class="coord">36.791666864363, -119.8190486560144</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">113 114 213 214</td>
+<td class="coord">36.79167008988712, -119.81924182764823</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">115 215</td>
+<td class="coord">36.79166957979178, -119.81940912064648</td>
+</tr>
+
+<tr>
+<td class="bldg">4045</td>
+<td class="unit">116 117 216 217</td>
+<td class="coord">36.79167666549886, -119.81959822828898</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4065 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.791949860990414, -119.8195992689073</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">103 203</td>
+<td class="coord">36.79196417695599, -119.8194100598357</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">104 105 204 205</td>
+<td class="coord">36.791955165654315, -119.81923858170939</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">106 107 206 207</td>
+<td class="coord">36.79195333031669, -119.81905341169302</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">108 109 208 209</td>
+<td class="coord">36.792129695545626, -119.81909913184583</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">110 111 210 211</td>
+<td class="coord">36.79224688453481, -119.81910188325867</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">112 113 212 213</td>
+<td class="coord">36.79237023229027, -119.8191054051743</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">114 214</td>
+<td class="coord">36.79251231553694, -119.81925438916888</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">115 116 215 216</td>
+<td class="coord">36.79251116667102, -119.81939272592126</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">117 118 217 218</td>
+<td class="coord">36.79251087576733, -119.81958570507025</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">119 120 219 220</td>
+<td class="coord">36.79270192464194, -119.81961676588242</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">121 122 221 222</td>
+<td class="coord">36.79278973512542, -119.81936939171936</td>
+</tr>
+
+<tr>
+<td class="bldg">4065</td>
+<td class="unit">123 124 223 224</td>
+<td class="coord">36.7927919495541, -119.81918015815094</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4073 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.79155939380538, -119.8204735035881</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79147940661794, -119.820299348497</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.7913144925517, -119.82000343282017</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.791470418953544, -119.81999561492279</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">109 110 209 210</td>
+<td class="coord">36.791677585488934, -119.81999595647862</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">111 112 211 212</td>
+<td class="coord">36.79167538834937, -119.82019422552146</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">113 114 213 214</td>
+<td class="coord">36.79178478319082, -119.82040022014998</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">115 116 215 216</td>
+<td class="coord">36.79190175599253, -119.8204001960817</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">117 118</td>
+<td class="coord">36.79209158247957, -119.8203849276409</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">119 120</td>
+<td class="coord">36.79205968874783, -119.82017539899626</td>
+</tr>
+
+<tr>
+<td class="bldg">4073</td>
+<td class="unit">121 122</td>
+<td class="coord">36.792051967644156, -119.81999429354138</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4081 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">101 102</td>
+<td class="coord">36.79238558583181, -119.82006630274549</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">103 104</td>
+<td class="coord">36.79239258832563, -119.82025955186009</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">105 106</td>
+<td class="coord">36.79253966278094, -119.82026251211938</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">107 108</td>
+<td class="coord">36.792733133202866, -119.82025608091904</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">109 110</td>
+<td class="coord">36.79273313195115, -119.8200645626802</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">111 112</td>
+<td class="coord">36.79295021269674, -119.82010511738825</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">113 114</td>
+<td class="coord">36.79304655155676, -119.82023756131348</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">115 116</td>
+<td class="coord">36.79314595143161, -119.82009643535388</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">117 118</td>
+<td class="coord">36.793177402669045, -119.81983286724665</td>
+</tr>
+
+<tr>
+<td class="bldg">4081</td>
+<td class="unit">119 120</td>
+<td class="coord">36.793074615027166, -119.81969179869402</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4085 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.79116909659908, -119.81786715896322</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79116906174767, -119.81801861063946</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.79116892255717, -119.81816320446988</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">107 207</td>
+<td class="coord">36.791252300109655, -119.81841169479847</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">108 109 208 209</td>
+<td class="coord">36.79133143944326, -119.81841286697622</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">110 111 210 211</td>
+<td class="coord">36.79145663171936, -119.81841202494076</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">112 113 212 213</td>
+<td class="coord">36.791576337693996, -119.81842395981118</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">114 214</td>
+<td class="coord">36.79173513890698, -119.8182222533111</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">115 116 215 216</td>
+<td class="coord">36.79173772173812, -119.8180807996389</td>
+</tr>
+
+<tr>
+<td class="bldg">4085</td>
+<td class="unit">117 118 217 218</td>
+<td class="coord">36.79174189411154, -119.81788629024722</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4111 N Fruit Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.792416469672496, -119.81828770681905</td>
+</tr>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.79229839620693, -119.81840809658783</td>
+</tr>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.79216340751399, -119.81856047984887</td>
+</tr>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.79226124846058, -119.81871265797379</td>
+</tr>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">109 209</td>
+<td class="coord">36.79232886591603, -119.8188162780712</td>
+</tr>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">110 111 210 211</td>
+<td class="coord">36.79263739159701, -119.81894367742319</td>
+</tr>
+
+<tr>
+<td class="bldg">4111</td>
+<td class="unit">112 113 212 213</td>
+<td class="coord">36.792763605120136, -119.81881303504026</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
 </div><div class="mapp-content">
 
 <span class="mapp-title">
